[package]
name = "clituner"
version = "0.1.0"
authors = ["da.lum <david.lum91@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "*"
colored = "2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
